feat: refactor services and adds image handling
- Renamed food-service to nexpos-service in docker-compose.yml and updated network configurations.
- Introduced Redis service for caching in docker-compose.yml.
- Modified Category, City, Item, User, and UserAddress entities to include Image handling.
- Added new Image entity and its repository for managing image data.
- Updated User entity to include image fields and validation methods.
- Implemented image upload functionality with resizing and validation in utils.
- Added rate limiting functionality to prevent excessive requests.
- Updated go.mod and go.sum to include new dependencies for image processing and Redis.
