# adapter/inbound/http/handler/user_handler.go
@@ -40,6 +40,7 @@ func NewUserHandler(
 func (h *UserHandler) RegisterRoutes(r fiber.Router) {
 	user := r.Group("/user", h.authMd.Require, h.userMd.CheckUser)
 	user.Get("/", h.GetUsers)
+	user.Put("/", h.UpdateUser)
 }
 
 // GetUsers godoc
@@ -49,11 +50,14 @@ func (h *UserHandler) RegisterRoutes(r fiber.Router) {
 // @Accept json
 // @Produce json
 // @Security ApiKeyAuth
-// @Success 200 {object} dto.Base{data=[]entity.User}
+// @Success 200 {object} dto.Base{data=[]dto.GetUsersOutDto}
 // @Failure 500 {object} dto.BaseError
 // @Router /user [get]
 func (h *UserHandler) GetUsers(c *fiber.Ctx) error {
-	user, err := h.uc.GetUsers(c.Context())
+	user, err := h.uc.GetUsers(c.Context(), &dto.GetUsersInDto{
+		Protocol: utils.PString(c.Protocol()),
+		HostName: utils.PString(c.Hostname()),
+	})
 	if err != nil {
 		return c.Status(fiber.StatusInternalServerError).JSON(dto.Base{
 			Success: utils.PBool(false),
@@ -68,6 +72,101 @@ func (h *UserHandler) GetUsers(c *fiber.Ctx) error {
 		Success: utils.PBool(true),
 		Error:   nil,
 		Message: utils.PString("Success"),
+		Data:    user,
+	})
+}
+
+// UpdateUser godoc
+// @Summary Update user
+// @Description Updates the details of an existing user, including optional profile image
+// @Tags User
+// @Accept multipart/form-data
+// @Produce json
+// @Param email query string false "Email address"
+// @Param username query string false "Username"
+// @Param phone_number query string false "Phone number"
+// @Param birth_date query string false "Birth date in format YYYY-MM-DD"
+// @Param name query string false "Full name"
+// @Param image formData file false "Profile image"
+// @Security ApiKeyAuth
+// @Success 200 {object} dto.Base{data=entity.User}
+// @Failure 400 {object} dto.BaseError
+// @Failure 500 {object} dto.BaseError
+// @Router /user [put]
+func (h *UserHandler) UpdateUser(c *fiber.Ctx) error {
+	id := c.Locals("userID").(*string)
+
+	email := utils.PString(c.Query("email"))
+	username := utils.PString(c.Query("username"))
+	phoneNumber := utils.PString(c.Query("phone_number"))
+	birthDate := utils.PString(c.Query("birth_date"))
+	name := utils.PString(c.Query("name"))
+
+	file, err := c.FormFile("image")
+	if err != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(dto.Base{
+			Success: utils.PBool(false),
+			Error: &dto.BaseError{
+				Code:    errors.ErrInvalidInput,
+				Message: utils.PString(err.Error()),
+			},
+		})
+	}
+
+	var imageData []byte
+	var imageName *string
+	var contentType *string
+
+	if file != nil {
+		imageData, imageName, contentType, err = utils.UploadImage(
+			utils.PInt(400),
+			utils.PInt(400),
+			utils.PInt(500*1024),
+			utils.PInt64(5*1024*1024),
+			file,
+		)
+		if err != nil {
+			return c.Status(fiber.StatusBadRequest).JSON(dto.Base{
+				Success: utils.PBool(false),
+				Error: &dto.BaseError{
+					Code:    errors.ErrInternalServer,
+					Message: utils.PString(err.Error()),
+				},
+			})
+		}
+	}
+
+	in := dto.SaveUserInDto{
+		ID:          id,
+		Email:       email,
+		Username:    username,
+		PhoneNumber: phoneNumber,
+		Name:        name,
+		Birthdate:   birthDate,
+	}
+
+	if len(imageData) > 0 {
+		in.Image = &dto.Image{
+			Name:        imageName,
+			Data:        utils.PByte(imageData),
+			ContentType: contentType,
+		}
+	}
+
+	user, err := h.uc.SaveUser(c.Context(), &in)
+	if err != nil {
+		return c.Status(fiber.StatusInternalServerError).JSON(dto.Base{
+			Success: utils.PBool(false),
+			Error: &dto.BaseError{
+				Code:    errors.ErrInternalServer,
+				Message: utils.PString(err.Error()),
+			},
+		})
+	}
+
+	return c.Status(fiber.StatusOK).JSON(dto.Base{
+		Success: utils.PBool(true),
+		Message: utils.PString("User updated with success!"),
 		Data:    user,
 	})
 }
