# application/dto/dto.go
@@ -18,6 +18,13 @@ type BaseError struct {
 	Message *string          `json:"message"`
 }
 
+type Image struct {
+	Name        *string `json:"name"`
+	Data        *[]byte `json:"-"`
+	Url         *string `json:"url,omitempty"`
+	ContentType *string `json:"content_type"`
+}
+
 type CreateUserInDto struct {
 	Username    *string `json:"username" validate:"required"`
 	Password    *string `json:"password" validate:"required"`
@@ -27,13 +34,6 @@ type CreateUserInDto struct {
 	PhoneNumber *string `json:"phone_number" validate:"required"`
 	ExternalID  *string `json:"external_id" validate:"-"`
 	Cpf         *string `json:"cpf" validate:"-"`
-}
-
-type CreateUserOutDto struct {
-	Base
-	ID    *string `json:"id"`
-	Name  *string `json:"name"`
-	Email *string `json:"email"`
 }
 
 type DeleteUserInDto struct {
@@ -46,16 +46,8 @@ type GetUserByUIDInDto struct {
 
 type CreateCategoryInDto struct {
 	Name        *string `json:"name"`
+	Image       *Image  `json:"image"`
 	Description *string `json:"description"`
-	Image       *string `json:"image"`
-}
-
-type CreateCategoryOutDto struct {
-	Base
-	ID          *string `json:"id"`
-	Name        *string `json:"name"`
-	Description *string `json:"description"`
-	Image       *string `json:"image"`
 }
 
 type DeleteCategoryInDto struct {
@@ -64,19 +56,10 @@ type DeleteCategoryInDto struct {
 
 type CreateItemInDto struct {
 	Name        *string  `json:"name"`
-	Image       *string  `json:"image"`
+	Image       *Image   `json:"image"`
 	Description *string  `json:"description"`
 	Price       *float64 `json:"price"`
 	CategoryID  *string  `json:"category_id"`
-}
-
-type CreateItemOutDto struct {
-	ID          *string               `json:"id"`
-	Name        *string               `json:"name"`
-	Description *string               `json:"description"`
-	Image       *string               `json:"image"`
-	Price       *float64              `json:"price"`
-	Category    *CreateCategoryOutDto `json:"category"`
 }
 
 type DeleteItemInDto struct {
@@ -90,14 +73,6 @@ type CreateDiscountInDto struct {
 	Date       *time.Time `json:"date"`
 }
 
-type CreateDiscountOutDto struct {
-	ID       *string               `json:"id"`
-	Category *CreateCategoryOutDto `json:"category,omitempty"`
-	Item     *CreateItemOutDto     `json:"item,omitempty"`
-	Value    *float64              `json:"value"`
-	Date     *time.Time            `json:"date"`
-}
-
 type DeleteDiscountInDto struct {
 	ID *string `json:"id"`
 }
@@ -109,4 +84,60 @@ type SignInInDto struct {
 type SignInOutDto struct {
 	ID   *string `json:"id"`
 	Name *string `json:"name"`
+}
+
+type SaveUserInDto struct {
+	ID          *string `json:"id"`
+	Username    *string `json:"username"`
+	Name        *string `json:"name"`
+	Birthdate   *string `json:"birth_date"`
+	Email       *string `json:"email"`
+	PhoneNumber *string `json:"phone_number"`
+	Image       *Image  `json:"image"`
+}
+
+type GetUsersInDto struct {
+	Protocol *string `json:"protocol"`
+	HostName *string `json:"host_name"`
+}
+type GetUsersOutDto struct {
+	ID          *string    `json:"id"`
+	Username    *string    `json:"username"`
+	Name        *string    `json:"name"`
+	Email       *string    `json:"email"`
+	Birthdate   *time.Time `json:"birth_date"`
+	PhoneNumber *string    `json:"phone_number"`
+	Image       *Image     `json:"image"`
+}
+
+type CreateCountryInDto struct {
+	Name       *string `json:"name"`
+	Identifier *string
+}
+
+type CreateStateInDto struct {
+	Name       *string `json:"name"`
+	Identifier *string `json:"identifier"`
+	CountryID  *string `json:"country_id"`
+}
+
+type CreateCityInDto struct {
+	Name    *string `json:"name"`
+	StateID *string `json:"state_id"`
+}
+
+type CreateDistrictInDto struct {
+	Name   *string `json:"name"`
+	CityID *string `json:"city_id"`
+}
+
+type CreateStreetInDto struct {
+	Name       *string `json:"name"`
+	DistrictID *string `json:"district_id"`
+	ZipCode    *string `json:"zip_code"`
+	Number     *string `json:"number"`
+}
+
+type FindCountryByIdentifierInDto struct {
+	Identifier *string `json:"identifier"`
 }
